fix footer and schedule spacing

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -23,11 +23,16 @@ img#loading {
 
 footer {
     margin: 0px auto;
-    width: 100%;
+    margin-top: 20px;
+    max-width: 950px;
 }
 
 footer .footer-column {
     float: left;
     width: 50%;
     color: #afafaf;
+}
+
+footer .footer-column:last-child {
+    text-align: right;
 }
