--- a/app/assets/stylesheets/schedule.css
+++ b/app/assets/stylesheets/schedule.css
@@ -38,3 +38,8 @@
     margin-right: 15px;
     margin-top: 10px;
 }
+
+#scheduleContent {
+    max-width: 950px;
+    margin: 0 auto;
+}
